# natsuzora

./: CLAUDE.md  README.md
.github/workflows/: ruby-ci.yml  rust-ci.yml
natsuzora/samples/blog/: render.rs
ruby/: .gitignore  .rubocop.yml  Gemfile  Rakefile  natsuzora.gemspec
ruby/lib/: natsuzora.rb
ruby/lib/natsuzora/: ast.rb  context.rb  errors.rb  ffi.rb  html_escape.rb  lexer.rb  parser.rb  renderer.rb  template.rb  template_loader.rb  token.rb  validator.rb  value.rb  version.rb
ruby/spec/: include_spec.rb  lexer_spec.rb  natsuzora_spec.rb  parser_spec.rb  renderer_errors_spec.rb  renderer_spec.rb  spec_helper.rb  spec_tests_spec.rb  token_processor_spec.rb
rust/: Cargo.toml
rust/crates/natsuzora/: Cargo.toml
rust/crates/natsuzora-ast/: Cargo.toml
rust/crates/natsuzora-ast/src/: lexer.rs  lib.rs  parser.rs  token.rs  token_processor.rs
rust/crates/natsuzora-ffi/: Cargo.toml
rust/crates/natsuzora-ffi/src/: lib.rs
rust/crates/natsuzora/src/: context.rs  error.rs  html_escape.rs  lib.rs  renderer.rs  template_loader.rs  value.rs
rust/crates/natsuzora/tests/: include_tests.rs  spec_tests.rs
rust/crates/tree-sitter-natsuzora/: Cargo.toml  build.rs
rust/crates/tree-sitter-natsuzora/src/: lib.rs
rust/src/: ast.rs  context.rs  error.rs  html_escape.rs  lexer.rs  lib.rs  parser.rs  renderer.rs  template_loader.rs  token.rs  validator.rs  value.rs
rust/tests/: include_tests.rs  spec_tests.rs
rust/tests/fixtures/templates/: greeting.tmpl  simple.tmpl
rust/tests/fixtures/templates/shared/layout/: _header.tmpl  _page.tmpl
rust/tests/fixtures/templates/shared/nav/: _item.tmpl
samples/blog/: category-engineering.json  category.ntzr  contracts.json  data.json  index.ntzr  post-component-design-best-practices.json  post-include-safety-checklist.json  post.ntzr  profile.ntzr  render.rb
samples/blog/contracts/: _types.ntzc  category.ntzc  index.ntzc  post.ntzc  profile.ntzc
samples/blog/shared/: _footer.ntzr  (+3 more)
spec/: bnf.md  spec.md  subaru-bnf.md  subaru.md
tests/: README.md  basic.json  block_errors.json  comment.json  delimiter_escape.json  each_block.json  edge_cases.json  errors.json  if_block.json  include.json  stringify.json  truthiness.json  unless_block.json  unsecure.json  whitespace_control.json
tree-sitter/: .gitignore  grammar.js  package.json
tree-sitter/queries/: folds.scm  highlights.scm
tree-sitter/src/: grammar.json  node-types.json  parser.c  scanner.c
typescript/: deno.json
typescript/src/: ast.ts  context.ts  errors.ts  html_escape.ts  lexer.ts  mod.ts  natsuzora.ts  parser.ts  platform.ts  renderer.ts  template_loader.ts  token.ts  validator.ts  value.ts
typescript/tests/: context_test.ts  lexer_test.ts  parser_test.ts  run_tests.ts  test_utils.ts  value_test.ts
(+22 files in other folders)
