[package]
name = "natsuzora"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "A minimal, display-only template language"
license = "MIT"
keywords = ["template", "html", "static-site"]
categories = ["template-engine", "web-programming"]

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
