[workspace]
members = [
    "crates/tree-sitter-natsuzora",
    "crates/natsuzora-ast",
    "crates/natsuzora",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
description = "A minimal, display-only template language"
license = "MIT"
keywords = ["template", "html", "static-site"]
categories = ["template-engine", "web-programming"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
