[package]
name = "natsuzora-ast"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Hand-written lexer, token processor, and parser for Natsuzora templates"
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
