[package]
name = "natsuzora"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
natsuzora-ast = { path = "../natsuzora-ast" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.10"
