[package]
name = "tree-sitter-natsuzora"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Tree-sitter language bindings for Natsuzora templates"
license.workspace = true
keywords.workspace = true
categories = ["parsing", "template-engine"]
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
tree-sitter = "0.20"

[build-dependencies]
cc = "1.0"
